<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@mipmap/toolbar_bg"
            android:theme="@style/ThemeOverlay.MyApp.ActionBar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_title"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@+id/appBarLayout"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:src="@mipmap/logo1" />

            <LinearLayout
                android:id="@+id/send_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_title"
                android:layout_centerInParent="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/spinner_ccode"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:gravity="bottom" />

                <EditText
                    android:id="@+id/edt_phoneno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/answeredittext"
                    android:fontFamily="sans-serif"
                    android:gravity="bottom"
                    android:hint="Enter your mobile number"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="16sp">

                    <requestFocus />

                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:padding="2dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="You'll receive SMS to verify your mobile number"
                    android:textColor="@color/mds_bluegrey_800"
                    android:textSize="13sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btn_mobsubmit"
                    android:layout_width="250dp"
                    android:layout_height="37dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/button_rounded"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="Send Verification Code"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/otp_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_title"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:visibility="visible">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="OTP has been sent to your mobile number"
                        android:textColor="@color/mds_bluegrey_800"
                        android:textSize="15sp"
                        android:visibility="visible" />


                    <TextView
                        android:id="@+id/tv_mobno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_text"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif"
                        android:gravity="center_horizontal"
                        android:padding="1dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text=""
                        android:textColor="@color/mds_bluegrey_600"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="visible" />


                    <LinearLayout
                        android:id="@+id/timer_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_mobno"
                        android:layout_marginTop="25dp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="sans-serif"
                            android:gravity="center_horizontal"
                            android:padding="5dp"

                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="Please wait. While reading OTP SMS Automatically..."
                            android:textColor="@color/blue_900"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/tv_timertext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_text"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="sans-serif"
                            android:gravity="center_horizontal"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:text="01:20"
                            android:textColor="@color/mds_bluegrey_600"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:visibility="visible" />

                        <ProgressBar
                            android:id="@+id/progressBar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/edt_otp"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/timer_layout"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/answeredittext"
                        android:ems="4"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:hint="Enter OTP code"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColor="@color/mds_bluegrey_800"
                        android:textSize="18sp"
                        android:textStyle="normal" />


                    <Button
                        android:id="@+id/btn_submit"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_below="@id/edt_otp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_rounded"
                        android:elevation="10dp"
                        android:fontFamily="sans-serif"
                        android:paddingLeft="40dp"
                        android:paddingRight="40dp"
                        android:text="Submit"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tv_resend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btn_submit"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="Don't receive otp yet? Resend OTP"
                        android:textColor="@color/mds_bluegrey_800"
                        android:textSize="15sp"
                        android:visibility="visible" />

                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/phone_auth_fields"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:visibility="gone"
                android:paddingRight="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/field_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone_number"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/field_verification_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_verification_code"
                        android:inputType="number" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="3.0">

                    <Button
                        android:id="@+id/button_start_verification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/start_phone_auth"
                        android:theme="@style/ThemeOverlay.MyDarkButton" />

                    <Button
                        android:id="@+id/button_verify_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/verify_phone_auth"
                        android:theme="@style/ThemeOverlay.MyDarkButton" />

                    <Button
                        android:id="@+id/button_resend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/resend_phone_auth"
                        android:theme="@style/ThemeOverlay.MyDarkButton" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>